Improved the pronoun usage example, corrected Satori's pronouns, and added Eri's gender and pronouns

--- a/html/obsidianrat.html
+++ b/html/obsidianrat.html
@@ -106,7 +106,7 @@
             </p>
             <p>
               ※代名詞は「あたい」である。<br>
-              『com』使用のたとえば：「<span class="neopronoun-demo"><em class="subjective-pronoun">Com</em> is talking with <em class="reflexive-pronoun">cometself</em> about <em class="possessive-determiner-pronoun">comets</em> day. But who is answering <em class="objective-pronoun">comet</em>, though?</span>」
+              『com』使用のたとえば：「<span class="neopronoun-demo"><em class="subjective-pronoun" title="Subjective">Com</em> is talking with <em class="reflexive-pronoun" title="Reflexive">cometself</em> about <em class="possessive-determiner-pronoun" title="Possessive determiner">comets</em> day. But who is answering <em class="objective-pronoun" title="Objective">comet</em>, though? Are these answers even <em class="possessive-pronoun" title="Possessive">comets</em>?</span>」
             </p>
           </div>
         </div>
@@ -228,15 +228,27 @@
             <h2 id="Eri_Fujii">藤井襟</h2>
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
-              <p class="pronouns">代名詞：</p>
-              <!-- Pride template / Pride flag placeholder :3 -->
+              <p class="pronouns">代名詞：they/them</p>
+              <!-- トランスフェミニン（Transfeminine） -->
               <div class="container">
-                <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-                  <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+                <a href="https://lgbtqia.fandom.com/wiki/Transfeminine" title="トランスフェミニン" target="_blank">
+                  <img class="pride-flag image" src="../img/pride/Transfeminine.png" alt="トランスフェミニン" title="トランスフェミニン（Transfeminine）">
                 </a>
                 <div class="middle">
                   <div class="text">
-                    プライド
+                    トランスフェミニン
+                  </div>
+                </div>
+              </div>
+              <br>
+              <!-- ポリジェンダー（Polygender） -->
+              <div class="container">
+                <a href="https://lgbtqia.fandom.com/wiki/Polygender" title="ポリジェンダー" target="_blank">
+                  <img class="pride-flag image" src="../img/pride/Polygender.png" alt="ポリジェンダー" title="ポリジェンダー（Polygender）">
+                </a>
+                <div class="middle">
+                  <div class="text">
+                    ポリジェンダー
                   </div>
                 </div>
               </div>
@@ -257,8 +269,8 @@
             </p>
             <p>
               性別：<br>
-              性自認：<br>
-              代名詞：<br>
+              性自認：ポリジェンダー・トランスフェミニン<br>
+              代名詞：奴（they/them）<br>
               雌雄性：
             </p>
             <p>
@@ -544,7 +556,7 @@
             <h2 id="Satori_Shuuyuu">臭鼬悟狸</h2>
             <div class="pride">
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
-              <p class="pronouns">代名詞：spark/sparks/sparkleself</p>
+              <p class="pronouns">代名詞：spark/sparkle/sparkleself</p>
               <!-- スパークルジェンダー（Sparklegender） -->
               <div class="container">
                 <a href="https://mogai-genders.fandom.com/wiki/Sparklegender" title="スパークルジェンダー" target="_blank">
@@ -573,7 +585,7 @@
             <p>
               性別：<br>
               性自認：スパークルジェンダー<br>
-              代名詞：<ruby>奴<rt>スパーク</rt></ruby>／<ruby>奴<rt>スパークス</rt></ruby>／<ruby>奴自身<rt>スパークルセルフ</rt></ruby>（spark/sparks/sparkleself）<br>
+              代名詞：<ruby>奴<rt>スパーク</rt></ruby>／<ruby>奴<rt>スパークス</rt></ruby>／<ruby>奴自身<rt>スパークルセルフ</rt></ruby>（spark/sparkle/sparkleself）<br>
               雌雄性：
             </p>
             <p>
@@ -584,7 +596,7 @@
             <p>ライラックの一匹使い魔である。臭鼬悟貍が生まれた。</p>
             <p>
               ※代名詞は「？」である。ピンインに「<span lang="zh-Latn" class="latin-font" title="Pinyin">Chòuyòu Wùlí</span>」で書く。ウェード式に「<span lang="zh-Latn" class="latin-font" title="Wade-Giles">Chʻou<sup>4</sup>-yu<sup>4</sup> Wu<sup>4</sup>-li<sup>2</sup></span>」で書く。国語ローマ字に「<span lang="zh-Latn" class="latin-font" title="Gwoyeu Romatzyh">Chowyow Wuhli</span>」で書く。繁体字に「<span lang="zh-Hant" class="traditional-hanzi-font" title="Traditional Chinese text">臭鼬悟貍</span>」を書く。簡体字に「<span lang="zh-Hans" class="simplified-hanzi-font" title="Simplified Chinese text">臭鼬悟狸</span>」で書く。<br>
-              『spark』使用のたとえば：「<span class="neopronoun-demo"><em class="subjective-pronoun">Spark</em> is talking with <em class="reflexive-pronoun">sparkleself</em> about <em class="possessive-determiner-pronoun">sparkles</em> day. But who is answering <em class="objective-pronoun">sparks</em>, though?</span>」
+              『spark』使用のたとえば：「<span class="neopronoun-demo"><em class="subjective-pronoun" title="Subjective">Spark</em> is talking with <em class="reflexive-pronoun" title="Reflexive">sparkleself</em> about <em class="possessive-determiner-pronoun" title="Possessive determiner">sparkles</em> day. But who is answering <em class="objective-pronoun" title="Objective">sparkle</em>, though? Are these answers even <em class="possessive-pronoun" title="Possessive">sparks</em>?</span>」
             </p>
           </div>
         </div>
