Imported flame_dragon.css and removed <ruby> elements from accordions

--- a/html/flame_dragon.html
+++ b/html/flame_dragon.html
@@ -27,6 +27,7 @@
     <title>造化神録　炎龍帝國</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <link rel="stylesheet" href="../css/flame_dragon.css">
     <link rel="stylesheet" href="../css/image_box.css">
     <link rel="stylesheet" href="../css/accordion.css">
     <!-- Scripts -->
@@ -45,7 +46,7 @@
       <h1 id="Empire_of_the_Flame_Dragon">炎龍帝國</h1><hr>
       <!-- 日（ニマ）の山｜Mt. Nyima｜ཉི་མ་གི་རི་｜nyi ma gi ri -->
       <div id="Peoples_of_Mt_Nyima">
-        <button class="accordion"><ruby>日<rt class="head-furigana">ニマ</rt></ruby>の山</button>
+        <button class="accordion">日の山</button>
         <div class="panel">
           <h2 id="Mt_Nyima"><ruby>日<rt class="head-furigana">ニマ</rt></ruby>の山</h2>
           <!-- ツェテンチャムクツァング町｜Tsetendramuktsang Town｜ཚེ་རྟེན་དྲ་མུངས་རྩངས་｜tshe rten dra mugs rtsangs -->
@@ -76,7 +77,7 @@
       </div>
       <!-- 月（タワ）の山｜Mt. Zlaba｜ཟླ་བ་གི་རི་｜zla ba gi ri -->
       <div id="Peoples_of_Mt_Zlaba">
-        <button class="accordion"><ruby>月<rt class="head-furigana">タワ</rt></ruby>の山</button>
+        <button class="accordion">月の山</button>
         <div class="panel">
           <h2 id="Mt_Zlaba"><ruby>月<rt class="head-furigana">タワ</rt></ruby>の山</h2>
           <!-- ケームツァング町｜Geymutsang Town｜གེའི་མུ་ཚངས་｜ge'i mu tshangs -->
@@ -871,7 +872,7 @@
       </div>
       <!-- 火（メ）の山｜Mt. Me｜མེ་གི་རི་｜me gi ri -->
       <div id="Peoples_of_Mt_Me">
-        <button class="accordion"><ruby>火<rt class="head-furigana">メ</rt></ruby>の山</button>
+        <button class="accordion">火の山</button>
         <div class="panel">
           <h2 id="Mt_Me"><ruby>火<rt class="head-furigana">メ</rt></ruby>の山</h2>
           <!-- チョクセイカーポ町｜Chokzaykarpo Town｜དཔྱོག་ཟའི་ཀར་པོ་｜dpyog za'i kar po -->
@@ -899,7 +900,7 @@
       </div>
       <!-- 水（チュ）の山｜Mt. Chu｜ཆུ་གི་རི་｜chu gi ri -->
       <div id="Peoples_of_Mt_Chu">
-        <button class="accordion"><ruby>水<rt class="head-furigana">チュ</rt></ruby>の山</button>
+        <button class="accordion">水の山</button>
         <div class="panel">
           <h2 id="Mt_Chu"><ruby>水<rt class="head-furigana">チュ</rt></ruby>の山</h2>
           <!-- タテュ町｜Dhadul Town｜འད་དུལ་｜'da dul -->
@@ -927,7 +928,7 @@
       </div>
       <!-- 木（シング）の山｜Mt. Shing｜ཤིང་གི་རི་｜shing gi ri -->
       <div id="Peoples_of_Mt_Shing">
-        <button class="accordion"><ruby>木<rt class="head-furigana">シング</rt></ruby>の山</button>
+        <button class="accordion">木の山</button>
         <div class="panel">
           <h2 id="Mt_Shing"><ruby>木<rt class="head-furigana">シング</rt></ruby>の山</h2>
           <!-- シェンラ・ウェーカー・タナクツァング町｜Shenlha Wökar Dhanacktsang Town｜ཤེན་ལྷ་དབོད་ཀར་དྭ་བརྣགས་བརྫངས་｜shen lha dbod kar dwa brnags brdzangs -->
@@ -955,7 +956,7 @@
       </div>
       <!-- 金（チャジ）の山｜Mt. Lcagsrigs｜ལྕགས་རིགས་གི་རི་｜lcags rigs gi ri -->
       <div id="Peoples_of_Mt_Lcagsrigs">
-        <button class="accordion"><ruby>金<rt class="head-furigana">チャジ</rt></ruby>の山</button>
+        <button class="accordion">金の山</button>
         <div class="panel">
           <h2 id="Mt_Lcagsrigs"><ruby>金<rt class="head-furigana">チャジ</rt></ruby>の山</h2>
           <!-- ナムデー町｜Namdol Town｜ནམ་དོལ་｜nam dol -->
@@ -983,7 +984,7 @@
       </div>
       <!-- 土（サ）の山｜Mt. Sa｜ས་གི་རི་｜sa gi ri -->
       <div id="Peoples_of_Mt_Sa">
-        <button class="accordion"><ruby>土<rt class="head-furigana">サ</rt></ruby>の山</button>
+        <button class="accordion">土の山</button>
         <div class="panel">
           <h2 id="Mt_Sa"><ruby>土<rt class="head-furigana">サ</rt></ruby>の山</h2>
           <!-- チョチェー・チュングネー町｜Chodron Jungney Town｜གཅོ་དྲོན་ཇུང་ནེའི་｜gco dron jung ne'i -->
