--- a/html/obsidianrat.html
+++ b/html/obsidianrat.html
@@ -585,7 +585,7 @@
             <p>
               性別：<br>
               性自認：スパークルジェンダー<br>
-              代名詞：<ruby>奴<rt>スパーク</rt></ruby>／<ruby>奴<rt>スパークス</rt></ruby>／<ruby>奴自身<rt>スパークルセルフ</rt></ruby>（spark/sparkle/sparkleself）<br>
+              代名詞：<ruby>奴<rt>スパーク</rt></ruby>／<ruby>奴<rt>スパークル</rt></ruby>／<ruby>奴自身<rt>スパークルセルフ</rt></ruby>（spark/sparkle/sparkleself）<br>
               雌雄性：
             </p>
             <p>
