Added <article> elements

--- a/html/gengo.html
+++ b/html/gengo.html
@@ -42,7 +42,66 @@
     <main>
       <!-- 多い言語（The Many Languages） -->
       <h1 id="The_Many_Languages">多い言語</h1><hr>
-      <p class="coming-soon">乞うご期待！！</p>
+      <!-- フルアルブカシュ語（Frualbuqash Language｜Фрѭалбуқащ ѩзйкъ｜Früalbuqaš′ yäzyįk′） -->
+      <article>
+        <button class="accordion">フルアルブカシュ語</button>
+        <div class="panel">
+          <div class="containment-unit">
+            <h2 id="Frualbuqash">フルアルブカシュ語</h2>
+            <p class="coming-soon">乞うご期待！！</p>
+          </div>
+        </div>
+      </article>
+      <!-- イルボスク語（Ilbåsk Language｜ilbåskéé keln｜ᡅᠯᢦᠪᠥᠰᢦᡣᠧᠧ ᡣᡄᠯᢦᠨ｜ilĕbåsĕkḗ kelĕn） -->
+      <article>
+        <button class="accordion">イルボスク語</button>
+        <div class="panel">
+          <div class="containment-unit">
+            <h2 id="Ilbåsk">イルボスク語</h2>
+            <p class="coming-soon">乞うご期待！！</p>
+          </div>
+        </div>
+      </article>
+      <!-- ネピ語（Neph Language） -->
+      <article>
+        <button class="accordion">ネピ語</button>
+        <div class="panel">
+          <div class="containment-unit">
+            <h2 id="Neph">ネピ語</h2>
+            <p class="coming-soon">乞うご期待！！</p>
+          </div>
+        </div>
+      </article>
+      <!-- プラーンバビ語（Praanbabi Language） -->
+      <article>
+        <button class="accordion">プラーンバビ語</button>
+        <div class="panel">
+          <div class="containment-unit">
+            <h2 id="Praanbabi">プラーンバビ語</h2>
+            <p class="coming-soon">乞うご期待！！</p>
+          </div>
+        </div>
+      </article>
+      <!-- ウープタリ語（Uuptari Language｜Ūptari liśānuňluğa） -->
+      <article>
+        <button class="accordion">ウープタリ語</button>
+        <div class="panel">
+          <div class="containment-unit">
+            <h2 id="Uuptari">ウープタリ語</h2>
+            <p class="coming-soon">乞うご期待！！</p>
+          </div>
+        </div>
+      </article>
+      <!-- ホワッバグドゥサ語（Xoabbagdosa Language） -->
+      <article>
+        <button class="accordion">ホワッバグドゥサ語</button>
+        <div class="panel">
+          <div class="containment-unit">
+            <h2 id="Xoabbagdosa">ホワッバグドゥサ語</h2>
+            <p class="coming-soon">乞うご期待！！</p>
+          </div>
+        </div>
+      </article>
       <!-- 始まりに戻る（Return to Top） -->
       <br>
       <a href="#top">始まりに戻る</a>
