Fixed date formatting

--- a/html/ibarasaki.html
+++ b/html/ibarasaki.html
@@ -3613,7 +3613,7 @@
               雌雄性：知るには若すぎるよー！！
             </p>
             <p>
-              誕生日：０３３７年２月２９日<br>
+              誕生日：アシュ０３３７年２月２９日<br>
               年齢：８歳
             </p>
             <p>家族：</p>
