--- a/html/hutagozima.html
+++ b/html/hutagozima.html
@@ -46,74 +46,101 @@
       <h1 id="United_Republic_of_the_Twin_Islands">二子島連合共和国</h1><hr>
       <!-- ディドフッフシ・チャギシー市（Dhidhhuffushi-Chaghisi City）-->
       <article>
-        <h2 id="Dhidhhuffushi-Chaghisi_City">ディドフッフシ・チャギシー市</h2>
-        <!-- （） -->
-        <section>
-          <h3 id=""></h3>
-          <p></p>
-        </section>
+        <button class="accordion">ディドフッフシ・チャギシー市</button>
+        <div class="panel">
+          <h2 id="Dhidhhuffushi-Chaghisi_City">ディドフッフシ・チャギシー市</h2>
+          <!-- （） -->
+          <section>
+            <h3 id=""></h3>
+            <p></p>
+          </section>
+        </div>
       </article>
       <!-- 天の島（Island of Ame） -->
       <div id="天の島">
-        <h2 id="Island_of_Ame">天の島</h2>
-        <!-- ティンダフナドゥー市（Thindafunadhoo City｜ތިންޑަފުނަދޫ｜Thindafunadhoo） -->
-        <article>
-          <h3 id="Thindafunadhoo_City">ティンダフナドゥー市</h3>
-          <!-- （） -->
-          <section>
-            <h4 id=""></h4>
-            <p></p>
-          </section>
-        </article>
-        <!-- クルドゥフヴァル市（Kulhudhufvaru City｜ކުޅުދުފްވަރު｜Kulhudhufvaru） -->
-        <article>
-          <h3 id="Kulhudhufvaru_City">クルドゥフヴァル市</h3>
-          <!-- （） -->
-          <section>
-            <h4 id=""></h4>
-            <p></p>
-          </section>
-        </article>
-        <!-- ヴィリンミードゥー市（Villinmeedhoo City｜ވިލްލިންމީދޫ｜Villinmeedhoo） -->
-        <article>
-          <h3 id="Villinmeedhoo_City">ヴィリンミードゥー市</h3>
-          <!-- （） -->
-          <section>
-            <h4 id=""></h4>
-            <p></p>
-          </section>
-        </article>
+        <button class="accordion">天の島</button>
+        <div class="panel">
+          <h2 id="Island_of_Ame">天の島</h2>
+          <!-- ティンダフナドゥー市（Thindafunadhoo City｜ތިންޑަފުނަދޫ｜Thindafunadhoo） -->
+          <article>
+            <button class="accordion">ティンダフナドゥー市</button>
+            <div class="panel">
+              <h3 id="Thindafunadhoo_City">ティンダフナドゥー市</h3>
+              <!-- （） -->
+              <section>
+                <h4 id=""></h4>
+                <p></p>
+              </section>
+            </div>
+          </article>
+          <!-- クルドゥフヴァル市（Kulhudhufvaru City｜ކުޅުދުފްވަރު｜Kulhudhufvaru） -->
+          <article>
+            <button class="accordion">クルドゥフヴァル市</button>
+            <div class="panel">
+              <h3 id="Kulhudhufvaru_City">クルドゥフヴァル市</h3>
+              <!-- （） -->
+              <section>
+                <h4 id=""></h4>
+                <p></p>
+              </section>
+            </div>
+          </article>
+          <!-- ヴィリンミードゥー市（Villinmeedhoo City｜ވިލްލިންމީދޫ｜Villinmeedhoo） -->
+          <article>
+            <button class="accordion">ヴィリンミードゥー市</button>
+            <div class="panel">
+              <h3 id="Villinmeedhoo_City">ヴィリンミードゥー市</h3>
+              <!-- （） -->
+              <section>
+                <h4 id=""></h4>
+                <p></p>
+              </section>
+            </div>
+          </article>
+        </div>
       </div>
       <!-- 魔の島（Island of Ma） -->
       <div id="魔の島">
-        <h2 id="Island_of_Ma">魔の島</h2>
-        <!-- ラタムガラー市（Latamgara City｜لتمگرا｜Latamgarā） -->
-        <article>
-          <h3 id="Latamgara_City">ラタムガラー市</h3>
-          <!-- （） -->
-          <section>
-            <h4 id=""></h4>
-            <p></p>
-          </section>
-        </article>
-        <!-- パッシャブ市（Passhab City｜پسشب｜Passhab） -->
-        <article>
-          <h3 id="Passhab_City">パッシャブ市</h3>
-          <!-- （） -->
-          <section>
-            <h4 id=""></h4>
-            <p></p>
-          </section>
-        </article>
-        <!-- カンダラタバド市（Qandalatabad City｜قندلتبد｜Qandalatabad） -->
-        <article>
-          <h3 id="Qandalatabad_City">カンダラタバド市</h3>
-          <!-- （） -->
-          <section>
-            <h4 id=""></h4>
-            <p></p>
-          </section>
-        </article>
+        <button class="accordion">魔の島</button>
+        <div class="panel">
+          <h2 id="Island_of_Ma">魔の島</h2>
+          <!-- ラタムガラー市（Latamgara City｜لتمگرا｜Latamgarā） -->
+          <article>
+            <button class="accordion">ラタムガラー市</button>
+            <div class="panel">
+              <h3 id="Latamgara_City">ラタムガラー市</h3>
+              <!-- （） -->
+              <section>
+                <h4 id=""></h4>
+                <p></p>
+              </section>
+            </div>
+          </article>
+          <!-- パッシャブ市（Passhab City｜پسشب｜Passhab） -->
+          <article>
+            <button class="accordion">パッシャブ市</button>
+            <div class="panel">
+              <h3 id="Passhab_City">パッシャブ市</h3>
+              <!-- （） -->
+              <section>
+                <h4 id=""></h4>
+                <p></p>
+              </section>
+            </div>
+          </article>
+          <!-- カンダラタバド市（Qandalatabad City｜قندلتبد｜Qandalatabad） -->
+          <article>
+            <button class="accordion">カンダラタバド市</button>
+            <div class="panel">
+              <h3 id="Qandalatabad_City">カンダラタバド市</h3>
+              <!-- （） -->
+              <section>
+                <h4 id=""></h4>
+                <p></p>
+              </section>
+            </div>
+          </article>
+        </div>
       </div>
       <!-- 始まりに戻る（Return to Top） -->
       <br>
