--- a/html/nizi.html
+++ b/html/nizi.html
@@ -488,7 +488,7 @@
                   誕生日：不明<br>
                   年齢：不明
                 </p>
-                <p>アラビア文字に「<span lang="ar" dir="rtl" class="naskh-font" title="Arabic text">عَيْنعَيْن</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="latin-font" title="Arabic romanisation (ISO 233-2)">ʿAyn</span>」を書く。</p>
+                <p>アラビア文字に「<span lang="ar" dir="rtl" class="naskh-font" title="Arabic text">عَيْن</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="latin-font" title="Arabic romanisation (ISO 233-2)">ʿAyn</span>」を書く。</p>
                 <br>
                 <a href="./gallery/nizi/ʿAyn.html" title="美術館へ" target="topframe">美術館へ行きますか？</a>
                 <br>
