Fixed date formatting

--- a/html/ushie.html
+++ b/html/ushie.html
@@ -940,7 +940,7 @@
                 雌雄性：知るには若すぎるよー！！
               </p>
               <p>
-                誕生日：０３３６年４月１２日<br>
+                誕生日：アシュ０３３６年４月１２日<br>
                 年齢：９歳
               </p>
               <p>家族：</p>
