Changed <img> source pointers

--- a/html/gallery/nizi/ʿAyn.html
+++ b/html/gallery/nizi/ʿAyn.html
@@ -47,7 +47,7 @@
         <h2 class="art-heading">レファレンス</h2><hr>
         <div class="flex-gallery" id="Flexbox 【レファレンス】">
           <div class="art-ref" id="アインのレファレンス">
-            <img class="reference-art-alt" src="../../../img/ref/ʿAyn.jpg" alt="アインのレファレンス">
+            <img class="reference-art" src="../../../img/ref/ʿAyn.png" alt="アインのレファレンス">
           </div>
         </div>
       </section>
@@ -77,6 +77,9 @@
       <section class="gallery" id="旧レファレンス">
         <h2 class="art-heading">旧レファレンス</h2><hr>
         <div class="flex-gallery" id="Flexbox 【旧レファレンス】">
+          <div class="art-ref" id="Old Reference 0">
+            <img class="reference-art-alt" src="../../../img/ref/oldref/ʿAyn/OldRef0.jpg" alt="旧レファレンス０">
+          </div>
         </div>
       </section>
       <!-- 始まりに戻る（Return to Top） -->
