Added Wilhelmina's sex, gender, pronouns, and sexuality

--- a/html/obsidianrat.html
+++ b/html/obsidianrat.html
@@ -172,18 +172,50 @@
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="pronouns">代名詞：</p>
-            <!-- Pride template / Pride flag placeholder :3 -->
+            <!-- インターセックス（Intersex） -->
             <div class="container">
-              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-                <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+              <a href="https://lgbtqia.fandom.com/wiki/Intersex" title="インターセックス" target="_blank">
+                <img class="pride-flag image" src="../img/pride/Intersex.png" alt="インターセックス" title="インターセックス（Intersex）">
               </a>
               <div class="middle">
                 <div class="text">
-                  プライド
+                  インターセックス
                 </div>
               </div>
             </div>
-            <br>
+            <!-- トランスフェミニン（Transfeminine） -->
+            <div class="container">
+              <a href="https://lgbtqia.fandom.com/wiki/Transfeminine" title="トランスフェミニン" target="_blank">
+                <img class="pride-flag image" src="../img/pride/Transfeminine.png" alt="トランスフェミニン" title="トランスフェミニン（Transfeminine）">
+              </a>
+              <div class="middle">
+                <div class="text">
+                  トランスフェミニン
+                </div>
+              </div>
+            </div>
+            <!-- ヘルジェンダー（Hellgender） -->
+            <div class="container">
+              <a href="https://www.deviantart.com/pride-flags/art/Hellgender-725456435" title="ヘルジェンダー" target="_blank">
+                <img class="pride-flag image" src="../img/pride/xeno/Hellgender.png" alt="ヘルジェンダー" title="ヘルジェンダー（Hellgender）">
+              </a>
+              <div class="middle">
+                <div class="text">
+                  ヘルジェンダー
+                </div>
+              </div>
+            </div>
+            <!-- アエゴセクシャル（Aegosexual） -->
+            <div class="container">
+              <a href="https://lgbtqia.fandom.com/wiki/Asexual_spectrum#Aegosexual" title="アエゴセクシャル" target="_blank">
+                <img class="pride-flag image" src="../img/pride/Aegosexual.png" alt="アエゴセクシャル" title="アエゴセクシャル（Aegosexual）">
+              </a>
+              <div class="middle">
+                <div class="text">
+                  アエゴセクシャル
+                </div>
+              </div>
+            </div>
           </div>
           <div class="art-chara">
             <img class="art" src="../img/fill.png" alt="ヴィルヘルミナ・ベットガー・エーレンライヒ">
@@ -200,10 +232,10 @@
             武器：ツヴァイヘンダー”ケニグトゥムシュヴェルト”
           </p>
           <p>
-            性別：<br>
-            性自認：<br>
-            代名詞：<br>
-            雌雄性：
+            性別：インターセックス（ミュラー管遺残症候群）<br>
+            性自認：トランスフェミニン・ヘルジェンダー<br>
+            代名詞：奴／<ruby>奴<rt>ヘル</rt></ruby>（they/hell）　（※）<br>
+            雌雄性：アエゴセクシャル
           </p>
           <p>
             誕生日：<br>
@@ -211,7 +243,10 @@
           </p>
           <p>家族：</p>
           <p>キャブロイシュタインの元王さまである。かつて強権で支配し、王国を地獄の独裁政権に変えた。黒曜石評議会の指導者である。</p>
-          <p>※代名詞は「<ruby>私<rt>わたし</rt></ruby>」である。</p>
+          <p>
+            ※代名詞は「<ruby>私<rt>わたし</rt></ruby>」である。<br>
+            　『hell』使用のたとえば：「<span class="neopronoun-demo"><em class="subjective-pronoun" title="Subjective">Hell</em> is talking with <em class="reflexive-pronoun" title="Reflexive">hellself</em> about <em class="possessive-determiner-pronoun" title="Possessive determiner">hells</em> day. But who is answering <em class="objective-pronoun" title="Objective">hells</em>, though? Are these answers even <em class="possessive-pronoun" title="Possessive">hells</em>?</span>」
+          </p>
         </div>
       </section>
       <!-- 藤井襟（Eri Fujii） -->
