Added Wilhelmina's pronouns

--- a/html/obsidianrat.html
+++ b/html/obsidianrat.html
@@ -171,7 +171,7 @@
           <h2 id="Wilhelmina_Böttger_Ehrenreich">ヴィルヘルミナ・ベットガー・エーレンライヒ</h2>
           <div class="pride">
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
-            <p class="pronouns">代名詞：</p>
+            <p class="pronouns">代名詞：they/hell</p>
             <!-- インターセックス（Intersex） -->
             <div class="container">
               <a href="https://lgbtqia.fandom.com/wiki/Intersex" title="インターセックス" target="_blank">
