--- a/html/ancient.html
+++ b/html/ancient.html
@@ -75,10 +75,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="柏嵜法牌香">
-                  <p class="caption">牌香</p>
-                </div>
+                  <figcaption class="caption">牌香</figcaption>
+                </figure>
                 <p>失われた都の法者</p>
                 <p>
                   柏嵜　法　牌香（かしざきのはかるのふだかう）<br>
